feat(landing): Landing page finished

--- a/components.json
+++ b/components.json
@@ -6,7 +6,7 @@
   "tailwind": {
     "config": "tailwind.config.mjs",
     "css": "src/styles/global.css",
-    "baseColor": "state",
+    "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
