--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "shadcn": "^2.1.0",
     "svgls": "^0.0.13",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
